--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -83,6 +83,7 @@
 
                             <div class="tab-pane fade" id="tab-order" role="tabpanel" aria-labelledby="tab-order-link">
                                 <!-- <div class="row mx-auto"> -->
+                                    <a href="/orders">
                                     <div class="card col-md-5 col-10 m-2 shadow-sm" id="allorder"
                                         style="border-radius: 7px; background: #F3F3F9; cursor: pointer;">
                                         <div class="card-body">
@@ -92,6 +93,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                </a>
                                     
                                 <!-- </div> -->
                             </div><!-- .End .tab-pane -->
