cart single product adding successfully done

--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -86,7 +86,7 @@
                             >+</a>
                     </div>
                   </td>
-                  <td class="total-col"><%= total %></td>
+                  <td class="total-col"><%= data.totalPrice %></td>
                   <td class="remove-col">
                     <button
                       class="btn-remove"
