--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -96,12 +96,13 @@
                     </button>
                   </td>
                 </tr>
-                <% }); %> <% }else{%>
-                <tr>
-                  cart is empty
-                </tr>
-                <%}%>
+                
               </tbody>
+              <% }); %> <% }else{%>
+                
+                cart is empty
+              
+              <%}%>
             </table>
 
             <!-- <div class="cart-bottom">
@@ -179,8 +180,7 @@
               <a
                 href="/checkout"
                 class="btn btn-outline-primary-2 btn-order btn-block"
-                >PROCEED TO CHECKOUT</a
-              >
+                >PROCEED TO CHECKOUT</a>
             </div>
 
             <a href="/shop" class="btn btn-outline-dark-2 btn-block mb-3"
