--- a/views/users/address.ejs
+++ b/views/users/address.ejs
@@ -1,49 +1,62 @@
 <%- include('../users/mainLayout/mainHeader.ejs')%>
 
  
-       
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+    Open Modal
+  </button>  
 
-<div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
-    <form action="" method="post" onsubmit="return validateForm();" class="border rounded p-4" style="width: 530px; height: 685px">
-        <h5 class="text-center">Billing Details</h5>
-        <div class="form-group">
-            <label for="FullName">Full Name *</label>
-            <input type="text" class="form-control" id="FullName" name="fullName" style="height: 37px" oninput="hideError('fullNameError')">
-            <span class="error-message text-danger" id="fullNameError"></span>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Billing Details</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="modal-body">
+          <form action="" method="post" onsubmit="return validateForm();" class="border rounded p-4" style="width: 530px;">
+            <div class="form-group">
+              <label for="FullName">Full Name *</label>
+              <input type="text" class="form-control" id="FullName" name="fullName" style="height: 37px">
+              <span class="error-message text-danger" id="fullNameError"></span>
+            </div>
 
         <div class="form-group">
             <label for="country">Country *</label>
-            <input type="text" class= "form-control" id="country" name="country" style="height: 37px" oninput="hideError('countryError')">
+            <input type="text" class= "form-control" id="country" name="country" style="height: 37px" >
             <span class="error-message text-danger" id="countryError"></span>
         </div>
 
         <div class="form-group">
             <label for="city">City *</label>
-            <input type="text" class="form-control" id="city" name="city" style="height: 37px" oninput="hideError('cityError')">
+            <input type="text" class="form-control" id="city" name="city" style="height: 37px" >
             <span class="error-message text-danger" id="cityError"></span>
         </div>
 
         <div class="form-group">
             <label for="state">State *</label>
-            <input type="text" class="form-control" id="state" name="state" style="height: 37px" oninput="hideError('stateError')">
+            <input type="text" class="form-control" id="state" name="state" style="height: 37px" >
             <span class="error-message text-danger" id="stateError"></span>
         </div>
 
         <div class="form-group">
             <label for="pinCode">Pin Code *</label>
-            <input type="text" class="form-control" id="pinCode" name="pincode" style="height: 37px" oninput="hideError('pinCodeError')">
+            <input type="text" class="form-control" id="pinCode" name="pincode" style="height: 37px" >
             <span class="error-message text-danger" id="pinCodeError"></span>
         </div>
 
         <div class="form-group">
             <label for="phone">Mobile *</label>
-            <input type="tel" class="form-control" id="phone" name="mobile" style="height: 37px" oninput="hideError('phoneError')">
+            <input type="tel" class="form-control" id="phone" name="mobile" style="height: 37px" >
             <span class="error-message text-danger" id="phoneError"></span>
         </div>
 
         <button type="submit" class="btn btn-primary">Register</button>
-    </form>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
 <script>
     function validateForm() {
