--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -2,7 +2,7 @@
 
 
 
-<main class="main">
+<main class="main" id="reloadDiv">
     <div
       class="page-header text-center"
       style="background-image: url('assets/images/page-header-bg.jpg')"
@@ -64,7 +64,8 @@
             <div class="row">
               <div class="col-md-8">
                 <h5 style="text-align: center;">Choose Billing Address</h5><br>
-                <% if(address.length> 0){ address.forEach((address)=>{ %>
+                <% if(address.length> 0){ %>
+                 <% address.forEach((address)=>{ %>
 
                     
 
@@ -73,26 +74,37 @@
 
                   <div class="container">
                     <div class="row">
-                      
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                          <div class="card mb-3">
-                            <label class="custom-label p-3 border rounded-4 m-2">
-                              <div class="form-check d-flex align-items-center mx-4">
-                                <input class="form-check-input" type="radio" value="<%= address.fullName %>,<%= address.mobile %>,<%= address.country %>,<%= address.city %>,<%= address.state %>,<%= address.pincode %>"
-                                  name="address" id="flexRadioDefault">
-                                <div class="mx-5">
-                                  <p class="text-dark"><b><%= address.fullName %></b>, <%= address.city %>, <%= address.state %>. Contact Number: <b style="color: #043a6c;"><span class="material-symbols-outlined" style="font-size: 13px;"><%= address.mobileNumber %></span><%= address.mobileNumber %></b></p>
-                                  <p><%= address.pincode %>, <%= address.country %></p>
-                                </div>
+                      <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div style="width: 500px;" class="card mb-3 rounded shadow">
+                          <!-- Move the close button to the top-right corner -->
+                          <button type="button" class="close" aria-label="Edit" style="position: absolute; top: 10px; right: 10px;">
+                            <i class="bi bi-pencil-square" aria-hidden="true" onclick="editAddress('<%= address._id %>')"></i>
+                          </button>
+                          <div class="custom-label p-3 m-2" onclick="handleCardClick(this)" >
+                            <div class="form-check d-flex align-items-center mx-4">
+                              <input class="form-check-input" type="radio" value="<%= address.fullName %>,<%= address.mobile %>,<%= address.country %>,<%= address.city %>,<%= address.state %>,<%= address.pincode %>"
+                                name="address" id="flexRadioDefault" required>
+                              <div class="mx-5">
+                                <p class="text-dark"><b><%= address.fullName %></b>, <%= address.city %>, <%= address.state %>. Contact Number: <b style="color: #043a6c;"><span class="material-symbols-outlined" style="font-size: 13px;"><%= address.mobileNumber %></span><%= address.mobileNumber %></b></p>
+                                <p><%= address.pincode %>, <%= address.country %></p>
                               </div>
-                            </label>
+                            </div>
                           </div>
                         </div>
-                      
+                      </div>
                     </div>
                   </div>
                   
-                <% } ) } %>
+                <% } ) %>
+                <button type="button" class="btn btn-primary"  style="margin-left: 10px;">Add New Address</button>
+             <% }else{ %>
+
+              <button type="button" class="btn btn-primary"  style="margin-left: 10px;">Add New Address</button>
+
+
+            <% } %>
+                
+
 
 
               </div>
@@ -219,34 +231,14 @@
   
   
   <script>
-    function removeAddress(id, event) {
-  // Prevent the default behavior of the anchor element (page navigation)
-  event.preventDefault();
-
-  console.log(id);
-  $.ajax({
-  url: "/removeAddress", // Check if this path is correct
-  data: {
-    id: id,
-  },
-  method: "post",
-  success: (response) => {
-    if (response.remove) {
-      location.reload();
-    }
-  },
-});
-}
+    
   
   </script>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-<script src ="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-
-
 <script>
   $("#checkout-form").submit(function(e) {
     console.log("clicked");
@@ -277,7 +269,16 @@
   });
 </script>
 
-    
+
+<!-- ================================================handling the radioButton to active entire the div========================================= -->
+
+<script>
+  function handleCardClick(card) {
+    // Trigger the click event of the radio button
+    const radioButton = card.querySelector('.form-check-input');
+    radioButton.click();
+  }
+  </script>
  
 
 <%- include('../users/mainLayout/mainFooter.ejs')%>
