--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,6 +1,12 @@
 <%- include('../users/mainLayout/mainHeader.ejs')%>
+
+<!-- <style>
+    .modal {
+      z-index: ; 
+    }
+  </style> -->
   
-<main class="main">
+<main class="main"  >
     <div class="page-header text-center " style="background-image: url('/user/images/page-header-bg.jpg')">
         <div class="container">
             <h1 class="page-title text-white">My Account</h1>
@@ -16,7 +22,7 @@
         </div><!-- End .container -->
     </nav><!-- End .breadcrumb-nav -->
 
-    <div class="page-content">
+    <div class="page-content" id="reloadDiv">
         <div class="dashboard">
             <div class="container">
                 <div class="row">
@@ -98,12 +104,12 @@
                                     
                                 <!-- </div> -->
                             </div><!-- .End .tab-pane -->
-                        <div class="tab-pane fade" id="tab-address" role="tabpanel" aria-labelledby="tab-address-link">
+                        <div class="tab-pane fade" id="tab-address" role="tabpanel" aria-labelledby="tab-address-link" >
                             
 
-                            <a href="/address">
+                            <button  data-toggle="modal" data-target="#myModal">
                                 <div class="card col-md-5 col-10 m-2 shadow-sm" id="addressDiv"
-                                        style="border-radius: 7px; background: #F3F3F9; cursor: pointer;  height: 86px;">
+                                        style="border-radius: 7px; background: #F3F3F9; cursor: pointer;  height: 86px; width: 749px" >
                                         <div class="card-body" style="height: 190px;">
                                             <div class="d-flex justify-content-center mt-1 py-4">
                                                 <i class="fa-solid fa-plus" style="color: #000000;"></i>
@@ -111,9 +117,9 @@
                                             </div>
                                         </div>
                                     </div>
-                            </a>
+                            </button>
                                  
-                            <div class="row">
+                            <div class="row" >
                            <%if(address){%>
                            <% for(let i=0;i<address.addresses.length;i++){%>
                                 <div class="card  m-2 col-md-3 col-10 p-4" style="background: #F3F3F9; border-radius: 10px; width: 208px">
@@ -212,27 +218,121 @@
 </main><!-- End .main -->
 
 
+<!-- ==================================================================modal addAddress=================================================================== -->
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="margin-top: 177px;">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Add Billing Address</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form action="" method="post" onsubmit="return validateForm()" class="border rounded p-4" style="width: 530px;">
+            <div class="form-group">
+                <div class="row">
+                    <div class="col">
+                        <label for="FullName">Full Name *</label>
+                        <input type="text" class="form-control" id="FullName" name="fullName" style="height: 37px">
+                        <span class="error-message text-danger" id="fullNameError"></span>
+                    </div>
+                    <div class="col">
+                        <label for="country">Country *</label>
+                        <input type="text" class="form-control" id="country" name="country" style="height: 37px">
+                        <span class="error-message text-danger" id="countryError"></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <label for="city">City *</label>
+                        <input type="text" class="form-control" id="city" name="city" style="height: 37px">
+                        <span class="error-message text-danger" id="cityError"></span>
+                    </div>
+                    <div class="col">
+                        <label for="state">State *</label>
+                        <input type="text" class="form-control" id="state" name="state" style="height: 37px">
+                        <span class="error-message text-danger" id="stateError"></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <label for="pinCode">Pin Code *</label>
+                        <input type="text" class="form-control" id="pinCode" name="pincode" style="height: 37px">
+                        <span class="error-message text-danger" id="pinCodeError"></span>
+                    </div>
+                    <div class="col">
+                        <label for="phone">Mobile *</label>
+                        <input type="tel" class="form-control" id="phone" name="mobile" style="height: 37px">
+                        <span class="error-message text-danger" id="phoneError"></span>
+                    </div>
+                </div>
+            </div>
+  
+           
+  
+            
+  
+            <button type="submit" class="btn  mx-auto rounded" style="background-color: rgb(70, 70, 215); color: #fff;">Register</button>
+
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
 
 
 <script>
-function deleteAddress(addressId){
-    $.ajax({
-     url:'/deleteAddress',
-     method:'post',
-     encoded:true,
-     data:{
-        addresses: addressId
-     }
-    }).done((data)=>{
-     if(data.remove){
-         swal('Item removed');
-     } else {
-         res.json({action: 'failed'});
-     }
-    });
+function deleteAddress(addressId) {
+  const swalWithBootstrapButtons = Swal.mixin({
+    customClass: {
+      confirmButton: 'btn btn-success',
+      cancelButton: 'btn btn-danger'
+    },
+    buttonsStyling: false
+  });
+
+  swalWithBootstrapButtons.fire({
+    title: 'Are you sure?',
+    text: "You won't be able to revert this!",
+    icon: 'warning',
+    showCancelButton: true,
+    confirmButtonText: 'Yes, delete it!',
+    cancelButtonText: 'Cancel',
+    reverseButtons: true
+  }).then((result) => {
+    if (result.isConfirmed) {
+      console.log("entered ajax");
+      $.ajax({
+        url: "/deleteAddress",
+        method: "post",
+        data: {
+          addressId: addressId,
+        },
+        success: (response) => {
+          if (response.remove === true) {
+            $('#reloadDiv').load('/profile #reloadDiv');
+          }
+        },
+      });
+    }
+  });
 }
 </script>
 
 
 
 <%- include('../users/mainLayout/mainFooter.ejs')%>
+
+
+
