added product details in admin side  and order details in admin side

--- a/views/admin/userOrders.ejs
+++ b/views/admin/userOrders.ejs
@@ -54,11 +54,11 @@
                           </td>
                           <td style="color: aliceblue;" class="text-center">
                             <div class="card-title">
-                              <!-- <a href="/admin/orderFullDetails?id=<%= orders._id %>"> -->
+                              <a href="/admin/orderFullDetails?id=<%= orders._id %>">
                                 <button type="button" class="btn btn-success btn-md" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                   Details
                                 </button>
-                              <!-- </a> -->
+                              </a>
                             </div>
                           </td>
                         
@@ -68,6 +68,7 @@
                     </tbody>
                   </table>
                   <!-- Pagination -->
+                  
         
 
         <!-- Pagination End -->
