--- a/views/admin/layouts/adminFooter.ejs
+++ b/views/admin/layouts/adminFooter.ejs
@@ -93,7 +93,9 @@
 
   
 
-    <script src="/static/adminAssets/fetch.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
 </body>
