--- a/views/admin/layouts/adminHeader.ejs
+++ b/views/admin/layouts/adminHeader.ejs
@@ -23,9 +23,9 @@
 <link id="pagestyle" href="/static/adminAssets/css/material-dashboard.css?v=3.0.0" rel="stylesheet" />
 
 
-
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.min.css" rel="stylesheet">
     
 
 </head>
